--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -149,6 +149,11 @@ body{
 	margin-bottom: 5px;
 }
 
-.cursor {
-	cursor: pointer;
-}
+.spinnerContainer {
+	height: 100vh;
+	width: 100%;
+	top: 50%;
+	right: 0;
+	transform: translateY(-50%);
+	position: absolute !important;
+  }
